--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,17 @@
 
 body {
   font-family: sans-serif;
+  background-color: rgb(255, 255, 255);
+}
+
+.navbar {
+  /* background: rgb(34, 193, 195);
+  background: linear-gradient(
+    0deg,
+    rgba(34, 193, 195, 1) 30%,
+    rgba(176, 153, 102, 1) 100%
+  ); */
+  background-image: url("../img/candy4.webp");
 }
 
 i {
@@ -59,4 +70,49 @@ a {
     grid-template-columns: repeat(2, 223px);
     gap: 50px;
   }
+}
+
+@media (max-width: 520px) {
+  .shop {
+    grid-template-columns: repeat(1, 223px);
+  }
+}
+
+.item {
+  border: 2px solid #212529;
+  border-radius: 4px;
+}
+
+.item img {
+  width: 220px;
+  height: 147px;
+  border-radius: 2px 2px 0 0;
+}
+
+.detail {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  gap: 10px;
+}
+
+.price-quantity {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.buttons {
+  display: flex;
+  gap: 8px;
+  font-size: 16px;
+}
+
+.bi-dash-lg {
+  color: red;
+}
+
+.bi-plus-lg {
+  color: green;
 }
