finished with the js logic for the main.js file

--- a/src/style.css
+++ b/src/style.css
@@ -72,6 +72,12 @@ a {
   }
 }
 
+@media (max-width: 1250px) {
+  .shop {
+    gap: 20px;
+  }
+}
+
 @media (max-width: 520px) {
   .shop {
     grid-template-columns: repeat(1, 223px);
