add the calculation and the update functions to the cart.js file

--- a/src/style.css
+++ b/src/style.css
@@ -121,3 +121,10 @@ a {
   height: 200px;
   overflow: hidden;
 }
+
+/* Css for cart.js*/
+/* Styles for labels and some buttons */
+.text-center {
+  text-align: center;
+  margin-bottom: 20px;
+}
